--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,70 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background-color: rgba(220, 20, 60, 0.501);
+.title{
+    text-align: center;
+    font-size: 40px;
+    margin:0 auto;
+    font-family: 'Anton', sans-serif;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); 
 }
+.container{
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;    
+}
+
+.box{
+    font-family: 'Anton', sans-serif;
+    border-radius:5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:5px;
+    width: calc(100% / 10 - 10px);
+    height: 60px;
+    border:1px solid black;
+    background-color: rgb(14, 40, 90); 
+    color:white;
+    
+    box-shadow: 0 8px 8px -4px lightblue;
+
+    /* animation fastidiosa */
+    animation: spinALittleBit 2s infinite;
+    
+}
+@keyframes spinALittleBit {
+    0% {
+        transform: rotate(0);
+    }
+    80% {
+        transform: rotate(760deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+.buzz{
+    background-color: rgb(34, 167, 34);
+    color:white;
+}
+.fizz{
+    background-color: orangered;
+    color:white;
+}
+.buzzfizz{
+    border:3px solid yellow;
+    border-radius:50%;
+    background-color: goldenrod;
+    color:black;
+
+    /* animation fastidiosa */
+    animation: spin 2s linear infinite;
+}
+@keyframes spin {
+        0% {
+            transform: rotate(1turn);   
+        }
+}
+
+
